--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
@@ -204,9 +204,9 @@
 
 ## 后续操作
 
-* 对于向已存在的 Zone 中增加 OBServer 的场景，添加 OBServer 成功后，如果需要进一步使用该资源，还需要调整租户的资源配置，具体操作可参见[向 Zone 内添加 OBServer 节点](../../../7.reference/2.administrator-guide/7.o-m-management/2.scale-out-and-scale-in-1/2.cluster-level-scale-out-and-scale-in/1.scale-out/2.add-an-observer-node-to-a-zone.md)。
+* 如果是向已存在的 Zone 中增加 OBServer，添加 OBServer 成功后，如果需要进一步使用该资源，还需要调整租户的资源配置，具体操作可参见[向 Zone 内添加 OBServer 节点](../../../7.reference/2.administrator-guide/7.o-m-management/2.scale-out-and-scale-in-1/2.cluster-level-scale-out-and-scale-in/1.scale-out/2.add-an-observer-node-to-a-zone.md)。
 
-* 对于添加 zone 并向该 Zone 中增加 OBServer 的场景，添加 OBServer 成功后，如果需要进一步使用该资源，还需要重新分配资源，并增加副本信息，具体操作可参见 [在集群中增加 Zone](../../../7.reference/2.administrator-guide/7.o-m-management/2.scale-out-and-scale-in-1/2.cluster-level-scale-out-and-scale-in/1.scale-out/1.add-a-zone-to-the-cluster.md)。
+* 如果是添加 zone 并向该 Zone 中增加 OBServer，添加 OBServer 成功后，如果需要进一步使用该资源，还需要重新分配资源，并增加副本信息，具体操作可参见 [在集群中增加 Zone](../../../7.reference/2.administrator-guide/7.o-m-management/2.scale-out-and-scale-in-1/2.cluster-level-scale-out-and-scale-in/1.scale-out/1.add-a-zone-to-the-cluster.md)。
 
 ## 相关文档
 
