--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
@@ -1,8 +1,12 @@
 # 删除节点
 
-删除节点就是将节点从集群中移除。
+可以通过 Delete Server 操作来删除节点。删除节点是添加节点的逆操作。
 
-## 删除节点
+## 背景信息
+
+Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元（称为 Unit ）会在同一个 Zone 中进行迁移。Unit 的迁移动作是 Unit 自动均衡的过程，主要由 RootService 控制。待 Unit 迁移成功，Delete Server 操作即可执行成功。如果您想要选择待删除节点上 Unit 迁移的目标机器，可以手动执行 Unit 迁移。
+
+## 操作步骤
 
 1. 使用 `root` 用户登录到数据库的 `sys` 租户。
 
@@ -12,29 +16,11 @@
    [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-2. 执行以下命令，删除 OBServer。
+2. （可选）手动迁移待删除节点上的 Unit。
 
-   语句如下：
-
-   ```sql
-   obclient [none]> ALTER SYSTEM DELETE SERVER 'ip:port' [,'ip:port'...] [ZONE [=] 'zone_name']
-   ```
-
-   相关参数说明如下：
-
-   * `ip`：表示待删除的节点所在的主机 IP。
-
-   * `port`：表示待删除的节点主机的 RPC 端口。
-
-   * `zone_name`：待删除的节点所属的 Zone。如果需要删除多个节点，多个节点要求必须在同一 Zone 内。
-
-   删除 `zone4` 中的一台 OBServer，示例如下：
-
-   ```sql
-   obclient [none]> ALTER SYSTEM DELETE SERVER "xx.xx.xx.10:2882" zone='zone4'
-   ```
-
-3. （可选）删除节点的命令执行后，RootService 会根据自己的规则将待删除 OBServer 上的 Unit 迁移到其他机器上，如果想要选择 Unit 迁移的目标机器，可以进行手动迁移。
+   >**说明**
+   >
+   >建议您手动迁移待删除的节点上的 Unit 后再执行 Delete Server 操作。
 
    1. 查看当前 Unit 分布，获取待迁移的 Unit 的 ID。
 
@@ -56,25 +42,95 @@
 
        * `ip`：指定 Unit 迁移后的节点所在的主机 IP。
 
-       * `port`：指定 Unit 迁移后的节点主机的 RPC 端口。
+       * `port`：指定 Unit 迁移后的节点的 RPC 端口。
 
-      将 ID 为 `1001` 的 Unit 迁移到 `xx.xx.xx.11` 服务器上的示例如下：
+      将 ID 为 `1001` 的 Unit 迁移到同 Zone 的 `xx.xx.xx.11` 服务器上的示例如下：
 
       ```sql
       obclient [none]> ALTER SYSTEM MIGRATE UNIT = unit_id DESTINATION = 'xx.xx.xx.11:2882'; 
       ```
 
-4. 待所有操作结束后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图，确认节点是否删除成功。
+3. 执行以下命令，删除 OBServer。
+
+   语句如下：
 
    ```sql
-   obclient [test]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
+   obclient [none]> ALTER SYSTEM DELETE SERVER 'ip:port' [,'ip:port'...] [ZONE [=] 'zone_name']
    ```
 
-   如果列表中已经查询不到该 OBServer，则表示删除成功。
+   相关参数说明如下：
+
+   * `ip`：表示待删除的节点所在的主机 IP。
+
+   * `port`：表示待删除的节点的 RPC 端口。
+
+   * `zone_name`：待删除的节点所属的 Zone。如果需要删除多个节点，多个节点要求必须在同一 Zone 内。
+
+   删除 `zone4` 中的一台 OBServer，示例如下：
+
+   ```sql
+   obclient [none]> ALTER SYSTEM DELETE SERVER "xx.xx.xx.10:2882" zone='zone4'
+   ```
+
+4. 待所有操作结束后，查询 `oceanbase.DBA_OB_SERVERS` 视图，确认节点是否删除成功。
+
+   ```sql
+   obclient [none]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
+   ```
+
+   如果列表中已经查询不到该 OBServer，则表示删除成功。如果列表中仍然有该节点，且该节点的状态为 `DELETING`，则表示该节点仍然在删除状态中。
+
+## 后续操作
+
+对于未手动迁移 Unit 而是直接执行 Delete Server 操作的场景，由于 Unit 均衡过程中可能会发生资源不足，即同 Zone 中其他节点的剩余资源不足以容纳待删除节点上的 Unit，将会导致 Unit 迁移失败，从而使该节点持续在删除状态中。您可以通过 `/home/admin/oceanbase/log/rootservice.log` 查看 Unit 是否迁移失败。如果确认是 Unit 迁移失败，则需要执行 Cancel Delete Server 操作，然后向 Zone 内添加节点对集群扩容后再重新删除节点。通过向 Zone 内添加节点进行集群扩容的相关操作请参见 [添加节点](4.add-a-node.md)。
+
+Cancel Delete Server 的具体操作如下：
+
+1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+
+   连接示例如下，连接数据库时请以实际环境为准。
+
+   ```bash
+   [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
+   ```
+
+2. 执行以下语句，取消删除 OBServer。
+
+   语句如下：
+
+   ```sql
+   obclient [none]> ALTER SYSTEM CANCEL DELETE SERVER 'ip:port' [,'ip:port'...] [ZONE [=] 'zone_name']
+   ```
+
+   相关参数说明如下：
+
+   * `ip`：表示待取消删除的节点所在的主机 IP。
+
+   * `port`：表示待取消删除的节点的 RPC 端口。
+
+   * `zone_name`：待取消删除的节点所属的 Zone。
+
+   示例如下：
+
+   ```sql
+   obclient [none]> ALTER SYSTEM CANCEL DELETE SERVER 'xx.xx.xx.10:2882' zone='zone4';
+   ```
+
+3. 查询 `oceanbase.DBA_OB_SERVERS` 视图，确认节点是否取消删除成功。
+
+   ```sql
+   obclient [none]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
+   ```
+
+   如果待取消删除的 OBServer 的状态从 `DELETING` 变为 `ACTIVE`，则表示取消删除成功。
 
 ## 相关文档
 
-* [查看节点](../2.view-the-cluster-composition/2.view-an-observer.md)
+更多节点相关的运维操作，请参见以下信息：
+
+* [查看节点](2.view-an-observer.md)
+
+* [重启节点](3.restart-a-node.md)
 
 * [添加节点](2.add-a-node.md)
 
