--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/8.add-a-zone.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/8.add-a-zone.md
@@ -93,7 +93,7 @@
 
 * 添加 Zone 后，如果要使用该 Zone，还需要向该 Zone 中添加节点，添加节点的详细操作请参见 [添加节点](4.add-a-node.md)。
 
-* 添加 Zone 后，新添加的 Zone 的状态为 `INACTIVE`，如果需要使该 Zone 内的节点能提供服务，还需要启动该 Zone，启动 Zone 的详细操作请参见 [启动 Zone](8.statrt-a-zone.md)。
+* 添加 Zone 后，新添加的 Zone 的状态为 `INACTIVE`，如果需要使该 Zone 内的节点能提供服务，还需要启动该 Zone，启动 Zone 的详细操作请参见 [启动 Zone](8.1.start-a-zone.md)。
 
 ## 相关文档
 
