--- a/zh-CN/8.tutorial-list.md
+++ b/zh-CN/8.tutorial-list.md
@@ -6,9 +6,37 @@
 
 本教程涵盖以下内容：
 
-- 部署 OceanBase 数据库
-- 创建示例应用程序
-- 体验 OceanBase 高级特性（coming soon）
+* 部署 OceanBase 数据库体验和测试环境
+
+    * [使用 OBD 快速部署 OceanBase 数据库](#使用-obd-快速部署-oceanbase-数据库)
+
+    * [使用 Docker 快速部署 OceanBase 数据库](#使用-docker-快速部署-oceanbase-数据库)
+
+* [OceanBase 数据库的基本操作](#oceanbase-数据库的基本操作)
+
+* 创建示例应用程序
+
+    * [创建 Python 应用程序](#创建-python-应用程序)
+
+    * [创建 C 应用程序](#创建-c-应用程序)
+
+    * [创建 Go 应用程序](#创建-go-应用程序)
+
+    * [创建 Java 应用程序](#创建-java-应用程序)
+
+* 体验 OceanBase 数据库高级特性（coming soon）
+
+    * 在 OceanBase 数据库上进行 TPC-C 测试
+
+    * 体验 OceanBase 数据库热点行更新能力
+
+    * 体验 Operational OLAP
+
+    * 体验并行导入 & 数据压缩
+
+    * 体验多租户特性
+
+    * 体验 DDL
 
 ## 使用 OBD 快速部署 OceanBase 数据库
 
@@ -51,7 +79,3 @@
 本视频介绍了如何通过 MySQL Connector/J 连接并使用 OceanBase 数据库。
 
 <video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/video/06%20%E5%88%9B%E5%BB%BA%20Java%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
-
-## More
-
-Coming soon.
