--- a/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/12.delete-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/12.delete-tenant.md
@@ -96,6 +96,6 @@ OceanBase 数据库支持通过 `DROP TENANT` 语句删除租户。
 
 * [恢复租户](13.restore-tenant.md)
 
-* [回收站](../../../7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/4.data-protection/4.recycle-bin.md)。
+* [回收站](../../4.high-availability/3.recyclebin-management/1.recyclebin-overview.md)。
 
-* [租户回收站](../../../7.reference/2.administrator-guide/5.backup-and-recovery/1.flashback/3.tenant-recycle.md)。
+* [恢复回收站对象](../../4.high-availability/3.recyclebin-management/4.restore-the-recyclebin-objects.md)。
