--- a/zh-CN/7.reference/5.system-reference/9.reserved-keywords-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/9.reserved-keywords-of-oracle-mode.md
@@ -1,9 +1,8 @@
-预留关键字
-==========================
+# 预留关键字（Oracle 模式）
 
-  <main id="notice" >
+  <main id="notice" type="">
     <h4>功能适用性</h4>
-    <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+    <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供了 MySQL 模式。</p>
   </main>
 
 目前，OceanBase 数据库 Oracle 模式下的预留关键字如下所示。
