--- a/zh-CN/6.manage/5.security-and-permissions/4.data-transfer-encryption/2.observer-in-transmission-encryption.md
+++ b/zh-CN/6.manage/5.security-and-permissions/4.data-transfer-encryption/2.observer-in-transmission-encryption.md
@@ -1,23 +1,6 @@
 # OBServer 传输加密
 
-可以通过以下方法设置 OBServer 的传输加密。
-
-## 支持的私钥/证书加载方式
-
-OBServer、liboblog、obadmin 等组件由于底层通信均依赖 Libeasy 库，因此支持的私钥/证书加载方式均相同，一种是本地文件模式，另一种是 BKMI 模式。
-
-* 本地文件模式
-
-  将 CA 证书、用户证书、私钥放在 `wallet` 文件夹下，根据配置项开启时从该目录下读取加载，安全性较差。
-  
-* BKMI 模式
-
-  BKMI（基础密钥服务）可以理解为密钥、证书产生和托管的仓库，当需要加载时可以通过 BKMI 分配给用户( OBServer 等）的应用身份私钥，用户身份信息等通过 URL 访问的方式，从 BKMI 获取加密后的私钥，之后通过应用身份私钥解密解出应用私钥来进行加载配置，安全性较高。
-  
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>BKMI 目前支持了蚂蚁密钥管控平台的 kms 服务，如果有外部需要，可以支持接入外部 kms。</p>
-  </main>
+OBServer 节点、liboblog、obadmin 等组件的底层通信均依赖 Libeasy 库，因此支持的私钥/证书加载方式均相同（本地文件模式），即将 CA 证书、用户证书、私钥放在 `wallet` 文件夹下，根据配置项开启时从该目录下读取加载。
 
 ## 开启方式
 
@@ -27,36 +10,10 @@ OBServer 传输加密的开启通过多个配置项配合使用。
 
 2. 指定私钥/证书/CA 证书的获取方式。
 
-   本地文件模式
-
    ```sql
    alter system set ssl_external_kms_info = '
    {
    "ssl_mode":"file"
-   }';
-   ```
-
-   或者
-
-   ```sql
-   alter system set ssl_external_kms_info = '';
-   ```
-
-   BKMI 模式
-
-   ```sql
-   alter system set ssl_external_kms_info = '
-   {
-   "ssl_mode":"bkmi",
-   "kms_host":"http://xxx",  bkmi主站的url
-   "root_cert": CA证书内容
-   "private_key": bkmi分配给用户的应用身份私钥，用来解密从bkmi获取的加密的应用私钥
-   "PRIVATE_KEY_PHRASE":"123456", bkmi分配给用户的应用身份私钥的解密密码
-   "SCENE":"ANT", 应用场景
-   "CALLER":"xxx", 进行服务调用的用户名，由bkmi分配
-   "CERT_NAME":"xxx", 用户证书的名称
-   "PRIVATE_KEY_NAME":"xxx", 用户私钥的名称
-   "KEY_VERSION":"1"
    }';
    ```
 
