--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
@@ -21,6 +21,17 @@
 
    目前，OceanBase 数据库支持 NFS 、阿里云 OSS 作为备份目的端。
 
+   语句如下：
+
+   ```sql
+   ALTER SYSTEM SET data_backup_dest='data_backup_path';
+   ```
+
+   <main id="notice" type='explain'>
+   <h4>说明</h4>
+   <p>如果通过 <code>sys<code> 租户配置备份目的端，则需要在语句中指定待发起备份的用户租户名（不能指定是 <code>sys</code> 租户），例如：<code>ALTER SYSTEM SET data_backup_dest='file:///data/nfs/backup/data' TENANT = mysql_tenant;</code>。</p>
+   </main>
+
    例如：
   
    * NFS
@@ -40,11 +51,6 @@
       ```sql
       obclient [(none)]> ALTER SYSTEM SET data_backup_dest='file:///data/nfs/backup/data';
       ```
-
-      <main id="notice" type='explain'>
-        <h4>说明</h4>
-        <p>如果是通过 <code>sys<code> 租户配置备份目的端，则需要在语句中指定待发起备份的用户租户名（不能指定是 <code>sys</code> 租户），例如：<code>ALTER SYSTEM SET data_backup_dest='file:///data/nfs/backup/data' TENANT = mysql_tenant;</code>。</p>
-      </main>
 
    * 阿里云 OSS
 
