--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/16.create-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/16.create-table-of-mysql-mode.md
@@ -81,13 +81,11 @@ table_option_list:
 table_option:
       [DEFAULT] {CHARSET | CHARACTER SET} [=] charset_name
     | [DEFAULT] COLLATE [=] collation_name
-    | primary_zone
     | table_tablegroup
     | block_size
     | compression
     | AUTO_INCREMENT [=] INT_VALUE
     | comment
-    | DUPLICATE_SCOPE [=] "none|cluster"
     | LOCALITY [=] "locality description"
     | ROW_FORMAT [=] REDUNDANT|COMPACT|DYNAMIC|COMPRESSED|DEFAULT
     | PCTFREE [=] num
@@ -149,7 +147,7 @@ partition_count | subpartition_count:
 | PRIMARY KEY                                          | 为创建的表指定主键。如果不指定，则使用隐藏主键。 特别地，OceanBase 数据库不支持修改表的主键或通过 `ALTER TABLE` 语句为表添加主键，因此推荐您在创建表时指定好表的主键。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
 | FOREIGN KEY                                          | 为创建的表指定外键。如果不指定外键名，则会使用表名 + `OBFK` + 创建时间命名。（例如，在 2021 年 8 月 1 日 00:00:00 为 `t1` 表创建的外键名称为 `t1_OBFK_1627747200000000`）。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
 | KEY \| INDEX                                         | 为创建的表指定键或索引。 如果不指定索引名，则会使用索引引用的第一列作为索引名，如果命名存在重复，则会使用下划线（_）+ 序号的方式命名。（例如，使用 `c1` 列创建的索引如果命名重复，则会将索引命名为 `c1_2`。） 您可以通过 `SHOW INDEX` 语句查看表上的索引。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
-| DUPLICATE_SCOPE                                      | 用来指定复制表属性，取值如下： <ul><li> `none`：表示该表是一个普通表。</li>    <li> `cluster`：表示该表是一个复制表，Leader 需要将事务复掉到 Cluster 的所有 F 副本及 R 副本。 </li></ul>不指定 `DUPLICATE_SCOPE` 的情况下，默认值为 `none`。 目前，OceanBase 数据库仅支持 `cluster` 级别的复制表。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
+
 | ROW_FORMAT                                           | 指定表是否开启 Encoding 存储格式。 <ul><li> `redundant`：不开启 Encoding 存储格式。   <li> `compact`：不开启 Encoding 存储格式。</li>   <li> `dynamic`：Encoding 存储格式。   <li> `compressed`：Encoding 存储格式。</li>   <li> `default`：等价 `dynamic` 模式。</li></ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
 | \[GENERATED ALWAYS\] AS (expr) \[VIRTUAL \| STORED\] | 创建生成列，`expr` 为用于计算列值的表达式。 <ul><li> `VIRTUAL`：列值不会被存储，而是在读取行时，在任何 `BEFORE` 触发器之后立即计算 。虚拟列不占用存储空间。</li>   <li> `STORED`：在插入或更新行时评估和存储列值。存储列确实需要存储空间并且可以被索引。</li></ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
 | BLOCK_SIZE                                           | 指定表的微块大小。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
@@ -172,14 +170,14 @@ partition_count | subpartition_count:
 * 创建数据库表。
 
   ```sql
-  obclient> CREATE TABLE test (c1 INT PRIMARY KEY, c2 VARCHAR(50)) PRIMARY_ZONE = 'zone1';
+  obclient> CREATE TABLE test (c1 INT PRIMARY KEY, c2 VARCHAR(50));
   Query OK, 0 rows affected
   ```
 
 * 创建一个复制表。
 
   ```sql
-  obclient> CREATE TABLE item(id INT, name VARCHAR(10)) DUPLICATE_SCOPE='cluster';
+  obclient> CREATE TABLE item(id INT, name VARCHAR(10));
   Query OK, 0 rows affected
   ```
 
