--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md
@@ -69,12 +69,10 @@ table_option_list:
     table_option [ table_option ...]
 
 table_option:
-    primary_zone
-    | table_group
+      table_group
     | block_size
     | compression
     | comment
-    | DUPLICATE_SCOPE [=] "none|cluster"
     | LOCALITY [=] "locality description"
     | ENABLE ROW MOVEMENT
     | DISABLE ROW MOVEMENT
@@ -85,7 +83,7 @@ physical_attribute_list:
     physical_attribute [physical_attribute]
 
 physical_attribute:
-    PCTFREE [=] num
+      PCTFREE [=] num
     | PCTUSED num
     | INITRANS num
     | MAXTRANS num
@@ -96,11 +94,11 @@ parallel_clause:
     {NOPARALLEL | PARALLEL integer}
     
 compression:
-    NOCOMPRESS
+      NOCOMPRESS
     | COMPRESS { BASIC | FOR OLTP | FOR QUERY [LOW | HIGH]  | FOR ARCHIVE [LOW | HIGH]} 
 
 storage_option:
-    INITIAL num [K|M|G|T|P|E]
+      INITIAL num [K|M|G|T|P|E]
     | NEXT num [K|M|G|T|P|E]
     | MINEXTENTS num [K|M|G|T|P|E]
     | MAXEXTENTS num [K|M|G|T|P|E]
@@ -206,7 +204,6 @@ on_commit_option:
 |-----------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | GLOBAL TEMPORARY            | 将该表创建为临时表。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
 | DEFAULT expression          | 指定列的默认值。`expression` 支持包含 Sequence 的函数表达式。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
-| DUPLICATE_SCOPE             | 用来指定复制表属性，取值如下： <ul><li> `none`：表示该表是一个普通表。</li>   <li> `cluster`：表示该表是一个复制表，Leader 需要将事务复制到 Cluster 的所有 F 副本及 R 副本。</li></ul>    不指定  `DUPLICATE_SCOPE` 的情况下，默认值为 `none`。 目前，OceanBase 数据库仅支持 `cluster` 级别的复制表。                                                                                                                                                                                     |
 | BLOCK_SIZE                  | 指定表的微块大小。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
 | COMPRESSION                 | 指定存储格式 Flat/Encoding 以及压缩方法，对应如下： <ul><li> `nocompress`：使用 Flat 格式，不进行压缩。</li>   <li> `compress [basic]`：使用 Flat 格式和 lz4_1.0 压缩方法。</li>   <li> `compress for oltp`：使用 Flat 格式和 zstd_1.0 压缩方法。</li>   <li>  `query low` 或者 `query high`：使用 Encoding 格式和  lz4_1.0 压缩方法。</li>   <li>  `archive low` 或者 `archive high`：使用 Encoding 格式和 zstd_1.0 压缩方法。</li> </ul>   |
 | primary_zone                | 指定主 Zone（副本 Leader 所在 Zone）。                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
@@ -224,7 +221,7 @@ on_commit_option:
 * 创建表 `tbl1`，并设置主 Zone 为 `zone1`。
 
   ```sql
-  obclient> CREATE TABLE tbl1 (col1 INT PRIMARY KEY, col2 VARCHAR(50)) PRIMARY_ZONE = 'zone1';
+  obclient> CREATE TABLE tbl1 (col1 INT PRIMARY KEY, col2 VARCHAR(50)) ;
   Query OK, 0 rows affected
   ```
 
@@ -235,10 +232,7 @@ on_commit_option:
                    i_data VARCHAR(50),i_im_id INT,PRIMARY KEY(i_id)) 
                    COMPRESS FOR QUERY 
                    PCTFREE = 0 
-                   BLOCK_SIZE = 16384
-                   DUPLICATE_SCOPE='cluster' 
-                   LOCALITY='F@zone1,R{all_server}@zone2' 
-                   PRIMARY_ZONE = 'zone1';
+                   BLOCK_SIZE = 16384;
   Query OK, 0 rows affected
   ```
 
