--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/18.create-user-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/18.create-user-of-mysql-mode.md
@@ -3,6 +3,7 @@
 ## 描述
 
 该语句用于创建新的 OceanBase 数据库用户。创建新用户后，可以使用该用户连接 OceanBase 数据库。
+
   <main id="notice" type='explain'>
     <h4>说明</h4>
     <p>必须拥有全局的 <code>CREATE USER</code> 权限，才可以使用 <code>CREATE USER</code> 命令。</p>
@@ -18,7 +19,7 @@ user_specification_list:
     user_specification [, user_specification ...]
 
 user_specification:
-    user IDENTIFIED BY  'authstring'
+    user IDENTIFIED BY 'authstring'
   | user IDENTIFIED BY PASSWORD 'hashstring'
 
 tls_option:
@@ -36,22 +37,31 @@ tls_option:
 | IDENTIFIED BY                            | 使用可选的 `IDENTIFIED BY` 子句，可以为账户给定一个密码。                  |
 | user_name \[, user_name ...\]            | 同时创建多个用户时，以逗号 (,) 隔开。                                  |
 | REQUIRE                                  | 指定用户使用的加密协议为 `NONE`、`SSL`、 `X509` 和 `tls_option` 中的一种。 |
-| user IDENTIFIED BY  'authstring'         | 此处密码为明文，存入 `mysql.user` 表后，服务器端会变为密文存储下来。              |
-| user IDENTIFIED BY PASSWORD 'authstring' | 此处密码为密文。                                               |
+| user IDENTIFIED BY 'authstring'         | 此处密码为明文，存入 `mysql.user` 表后，服务器端会变为密文存储下来。              |
+| user IDENTIFIED BY PASSWORD 'authstring' | 此处密码为密文。此处密码为 mysql.user 中的密文。                                               |
 
 ## 示例
 
-1. 执行以下命令创建名为 `sqluser01` 和 `sqluser02` 的用户，密码均为 `123456`。
+1. 执行以下命令创建名为 `sqluser01` 和 `sqluser02` 的用户并指定明文密码。
 
-   ```sql
-   obclient> CREATE USER 'sqluser01' IDENTIFIED BY '123456', 'sqluser02' IDENTIFIED BY '123456';
+   ```shell
+   obclient> CREATE USER 'sqluser01' IDENTIFIED BY '123456', 'sqluser02' IDENTIFIED BY '******';
    ```
 
-2. 执行以下命令查看创建的用户。
+2. 创建名为 `sqluser03` 的用户并指定密文密码。 
 
-   ```sql
-   obclient> CREATE USER 'sqluser01' IDENTIFIED BY '123456', 'sqluser02' IDENTIFIED BY '123456';
+   ```shell
+   //查询密文密码
+   obclient> SELECT PASSWORD FROM mysql.user;
+
+   obclient> CREATE USER 'sqluser03' IDENTIFIED BY PASSWORD '******************';
    Query OK, 0 rows affected 
+   ``` 
+
+3. 执行以下命令查看创建的用户。
+
+   ```shell
+
    obclient> SELECT user FROM mysql.user;
    +-----------+
    | user      |
@@ -60,6 +70,7 @@ tls_option:
    | admin     |
    | sqluser01 |
    | sqluser02 |
+   | sqluser03 |
    +-----------+
-   4 rows in set 
+   5 rows in set 
    ```
