--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md
@@ -21,13 +21,13 @@
    * 通过 ODP 连接的方式
 
       ```sql
-      $mysql -h10.10.10.1 -uusername@obmysql#obdemo -P2883 -ppassword -c -A oceanbase
+      $mysql -h10.10.10.1 -uusername@obmysql#obdemo -P2883 -p****** -c -A oceanbase
       ```
 
       或者
 
       ```sql
-      $mysql -h10.10.10.1 -uobdemo:obmysql:username -P2883 -ppassword -c -A oceanbase
+      $mysql -h10.10.10.1 -uobdemo:obmysql:username -P2883 -p****** -c -A oceanbase
       ```
 
       参数说明：
@@ -47,19 +47,19 @@
       示例：
 
       ```sql
-      $mysql -h10.10.10.1 -u******@obmysql#obdemo -P2883 -p**1*** -c -A oceanbase
+      $mysql -h10.10.10.1 -u******@obmysql#obdemo -P2883 -p****** -c -A oceanbase
       ```
 
       或者
 
       ```sql
-      $mysql -h10.10.10.1 -uobdemo:obmysql:****** -P2883 -p**1*** -c -A oceanbase
+      $mysql -h10.10.10.1 -uobdemo:obmysql:****** -P2883 -p****** -c -A oceanbase
       ```
 
    * 通过直连方式
 
       ```sql
-      $mysql -h10.10.10.1 -uusername@obmysql -P2881 -ppassword -c -A oceanbase
+      $mysql -h10.10.10.1 -uusername@obmysql -P2881 -p****** -c -A oceanbase
       ```
 
       参数说明：
@@ -83,7 +83,7 @@
       示例：
 
       ```sql
-      $mysql -h10.10.10.1 -u******@obmysql -P2881 -p**1*** -c -A oceanbase
+      $mysql -h10.10.10.1 -u******@obmysql -P2881 -p****** -c -A oceanbase
       ```
 
 3. 连接成功后，默认会有命令行提示符。
@@ -99,7 +99,7 @@
 通过 MySQL 客户端连接 OceanBase 数据库的 MySQL 租户。
 
 ```sql
-$mysql -h10.10.10.1 -u******@obmysql#obdemo -P2883 -p**1*** -c -A oceanbase
+$mysql -h10.10.10.1 -u******@obmysql#obdemo -P2883 -p****** -c -A oceanbase
 Welcome to the MariaDB monitor.  Commands end with ; or \g.
 Your MySQL connection id is 5751
 Server version: 5.6.25 OceanBase 4.0.0 (r10100032022041510-a09d3134c10665f03fd56d7f8bdd413b2b771977) (Built Apr 15 2022 02:16:22)
