--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
@@ -19,13 +19,13 @@
    * 通过 ODP 连接的方式
 
       ```sql
-      obclient -h10.10.10.1 -uusername@obtenant#obdemo -P2883 -ppassword -c -A oceanbase
+      obclient -h10.10.10.1 -uusername@obtenant#obdemo -P2883 -p****** -c -A oceanbase
       ```
 
       或者
 
       ```sql
-      obclient -h10.10.10.1 -uobdemo:obtenant:username -P2883 -ppassword -c -A oceanbase
+      obclient -h10.10.10.1 -uobdemo:obtenant:username -P2883 -p****** -c -A oceanbase
       ```
 
       参数说明：
@@ -45,19 +45,19 @@
       示例如下：
 
       ```sql
-      obclient -h10.10.10.1 -u*****@obtenant#obdemo -P2883 -p**1*** -c -A oceanbase
+      obclient -h10.10.10.1 -u*****@obtenant#obdemo -P2883 -p****** -c -A oceanbase
       ```
 
       或者
 
       ```sql
-      obclient -h10.10.10.1 -uobdemo:obtenant:***** -P2883 -p**1*** -c -A oceanbase
+      obclient -h10.10.10.1 -uobdemo:obtenant:***** -P2883 -p****** -c -A oceanbase
       ```
 
    * 通过直连方式
 
       ```sql
-      obclient -h10.10.10.1 -uusername@obtenant -P2881 -ppassword -c -A oceanbase
+      obclient -h10.10.10.1 -uusername@obtenant -P2881 -p****** -c -A oceanbase
       ```
 
       参数说明：
@@ -81,7 +81,7 @@
       示例：
 
       ```sql
-      obclient -h10.10.10.1 -u******@obtenant -P2881 -p**1*** -c -A oceanbase
+      obclient -h10.10.10.1 -u******@obtenant -P2881 -p****** -c -A oceanbase
       ```
 
 3. 连接成功后，默认会有如下命令行提示符。
@@ -97,7 +97,7 @@
 通过 OBClient 连接 OceanBase 数据库的 MySQL 租户。
 
 ```sql
-$obclient -h10.10.10.1 -u******@obmysql#obdemo -P2883 -p**1*** -c -A sys
+$obclient -h10.10.10.1 -u******@obmysql#obdemo -P2883 -p****** -c -A sys
 Welcome to the OceanBase.  Commands end with ; or \g.
 Your OceanBase connection id is 3221684181
 Server version: OceanBase 4.0.0.0 (r100000302022111120-7cef93737c5cd03331b5f29130c6e80ac950d33b) (Built Nov 11 2022 20:38:33)
