--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/7.commonpool-configuration-example-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/7.commonpool-configuration-example-of-oracle-mode.md
@@ -140,7 +140,7 @@ hibernate 配置文件：
         <property name="connection.driver_class">com.alipay.oceanbase.jdbc.Driver</property>
         <property name="connection.url">jdbc:oceanbase://10.100.xxx.xxx:18815/test</property>
         <property name="connection.username">admin@oracle</property>
-        <property name="connection.password">admin</property>
+        <property name="connection.password">******</property>
 
         <!-- 可选配置 -->
       
