--- a/zh-CN/1.users-guide/6.basic-database-management/1.manage-clusters/1.create-a-cluster.md
+++ b/zh-CN/1.users-guide/6.basic-database-management/1.manage-clusters/1.create-a-cluster.md
@@ -110,7 +110,7 @@
    obd cluster start <deploy_name> 
    ```
 
-   此命令会检查系统参数 `fs.aio-max-nr` 是否不小于 1048576。通常情况下一台机器启动一个节点不需要修改 `fs.aio-max-nr`。但当一台机器需要启动 4 个及以上的节点时，请务必修改 `fs.aio-max-nr`。详细信息请参考 [（可选）配置 sysctl.conf](../../3.installation-and-deployment/4.environment-and-configuration-checks.md)。
+   此命令会检查系统参数 `fs.aio-max-nr` 是否不小于 1048576。通常情况下一台机器启动一个节点不需要修改 `fs.aio-max-nr`。但当一台机器需要启动 4 个及以上的节点时，请务必修改 `fs.aio-max-nr`。详细信息请参考 [（可选）配置 sysctl.conf](../../3.installation-and-deployment/4.environment-and-configuration-checks/6.configure-sysctl-conf-optional.md)。
 
 5. 运行以下命令查看集群状态：
 
