--- a/zh-CN/1.users-guide/12.reference-guide/3.system-configuration-items/254.kv_hotkey_throttle_threshold.md
+++ b/zh-CN/1.users-guide/12.reference-guide/3.system-configuration-items/254.kv_hotkey_throttle_threshold.md
@@ -9,7 +9,7 @@
 
 | **属性** | **描述** |
 | ----- | ----- |
-| 参数类型 | 中文表示 |
+| 参数类型 | 整数型 |
 | 默认值 | 0 |
 | 取值范围 | [0, 1000000000000000000L] |
 | 是否重启 OBServer 节点生效 | 否 |
